[gd_scene load_steps=11 format=2]

[ext_resource path="res://tscn/Dialog.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/calendar_button/scripts/calendar_script.gd" type="Script" id=2]
[ext_resource path="res://scripts/ExportingCSVDialog.gd" type="Script" id=3]
[ext_resource path="res://res/Helvetica_bold.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_03.png" type="Texture" id=5]
[ext_resource path="res://addons/calendar_button/btn_img/btn_32x32_04.png" type="Texture" id=6]
[ext_resource path="res://res/buttons/default_green_button_pressed.tres" type="StyleBox" id=7]
[ext_resource path="res://res/buttons/default_green_button_hover.tres" type="StyleBox" id=8]
[ext_resource path="res://res/buttons/default_green_button_normal.tres" type="StyleBox" id=9]
[ext_resource path="res://res/buttons/default_button_disabled.tres" type="StyleBox" id=10]

[node name="ExportingCSVDialog" instance=ExtResource( 1 )]
script = ExtResource( 3 )

[node name="Panel" parent="." index="1"]
margin_top = -283.0
margin_bottom = 283.0

[node name="Title" parent="Panel/VBoxContainer/Head" index="0"]
text = "Exporter en CSV"

[node name="Body" parent="Panel/VBoxContainer" index="1"]
margin_bottom = 506.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Body" index="0"]
margin_left = 194.0
margin_top = 205.0
margin_right = 605.0
margin_bottom = 255.0

[node name="GridContainer" type="GridContainer" parent="Panel/VBoxContainer/Body/VBoxContainer" index="0"]
margin_right = 411.0
margin_bottom = 32.0
custom_constants/vseparation = 15
custom_constants/hseparation = 25
columns = 3

[node name="BeginingLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="0"]
margin_top = 9.0
margin_right = 109.0
margin_bottom = 23.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DÃ©but des cours:"

[node name="BeginingWeekLineEdit" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="1"]
margin_left = 134.0
margin_right = 354.0
margin_bottom = 32.0
rect_min_size = Vector2( 220, 0 )
custom_colors/font_color_uneditable = Color( 0.486275, 0.486275, 0.486275, 1 )
text = "Aucune date"
align = 1
editable = false
expand_to_text_length = true

[node name="BeginingDateButton" type="TextureButton" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="2"]
margin_left = 379.0
margin_right = 411.0
margin_bottom = 32.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 2 )

[node name="EndLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="3"]
visible = false
margin_top = 47.0
margin_right = 186.0
margin_bottom = 61.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Semaine de fin des cours:"

[node name="BeginingLineEdit2" type="LineEdit" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="4"]
visible = false
margin_left = 211.0
margin_top = 47.0
margin_right = 431.0
margin_bottom = 71.0
rect_min_size = Vector2( 220, 0 )
text = "Aucune date"
align = 1
editable = false
expand_to_text_length = true

[node name="EndDateButton" type="TextureButton" parent="Panel/VBoxContainer/Body/VBoxContainer/GridContainer" index="5"]
visible = false
margin_left = 456.0
margin_top = 47.0
margin_right = 488.0
margin_bottom = 79.0
toggle_mode = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 6 )
script = ExtResource( 2 )

[node name="NotificationLabel" type="Label" parent="Panel/VBoxContainer/Body/VBoxContainer" index="1"]
margin_top = 36.0
margin_right = 411.0
margin_bottom = 50.0
rect_min_size = Vector2( 320, 0 )
custom_colors/font_color = Color( 0.803922, 0.117647, 0.117647, 1 )
align = 1

[node name="Foot" parent="Panel/VBoxContainer" index="2"]
margin_top = 506.0
margin_bottom = 566.0

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Foot" index="0"]
margin_left = 210.0
margin_top = 12.0
margin_right = 590.0
margin_bottom = 47.0
rect_min_size = Vector2( 300, 0 )
custom_constants/separation = 10
alignment = 1

[node name="ExportButton" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="0"]
margin_right = 120.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_fonts/font = ExtResource( 4 )
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 9 )
enabled_focus_mode = 0
text = "Exporter"

[node name="ExportButtonDisabled" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="1"]
margin_left = 130.0
margin_right = 250.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 10 )
custom_styles/focus = ExtResource( 10 )
custom_styles/disabled = ExtResource( 10 )
custom_styles/normal = ExtResource( 10 )
enabled_focus_mode = 0
text = "Exporter"

[node name="CancelButton" type="Button" parent="Panel/VBoxContainer/Foot/HBoxContainer" index="2"]
margin_left = 260.0
margin_right = 380.0
margin_bottom = 35.0
rect_min_size = Vector2( 120, 30 )
focus_mode = 0
enabled_focus_mode = 0
text = "Annuler"

[connection signal="date_selected" from="Panel/VBoxContainer/Body/VBoxContainer/GridContainer/BeginingDateButton" to="." method="_on_BeginingDateButton_date_selected"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Foot/HBoxContainer/CancelButton" to="." method="_on_CancelButton_pressed"]
